<?xml version="1.0"?>
<package>
  <name>youbot_gazebo_message_wrapper</name>
  <version>0.0.0</version>
  <description>The youbot_gazebo_message_wrapper package</description>
  <maintainer email="walter@todo.todo">walter</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>

</package>
